Closed Bug 1501491 Opened 7 years ago Closed 7 years ago

Unable to build on Windows without content sandbox

Categories

(Core Graveyard :: Plug-ins, defect)

Unspecified
Windows
defect
Not set
normal

Tracking

(firefox65 fixed)

RESOLVED FIXED
mozilla65
Tracking Status
firefox65 --- fixed

People

(Reporter: bytesized, Assigned: bytesized)

References

Details

Attachments

(2 files)

Attached file build.log
I have been unable to build locally, and I suspect that it is due to the patch for Bug 1488439 merging. I have this line in my mozconfig, that I believe causes me to see this issue when others do not: ac_add_options --disable-content-sandbox I have attached the error messages that I get when building.
Assignee: nobody → ksteuber
Pushed by ksteuber@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c939a33dc358 Fix the Firefox build flag: --disable-content-sandbox r=bobowen,handyman
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: