Bug 1501491 - Fix the Firefox build flag: --disable-content-sandbox r=bobowen,handyman

Differential Revision: https://phabricator.services.mozilla.com/D9811

--HG--
extra : moz-landing-system : lando